--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -22,6 +22,7 @@
             margin-top: 0;
 			margin: 0;
 			padding: 0;
+			margin-bottom: -20;
         }
         .main-container {
             padding-top: 0;
@@ -162,6 +163,7 @@
             width: 100%;
             overflow: hidden;
             /* background-color: #f8f9fa; */
+			margin: 0;
             padding: 0 rem 0; /* Decrease padding to reduce gap */
             margin-top: 0px;  /* Bring the carousel closer to the page */
         }
