--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -170,7 +170,8 @@
         }
 
         .carousel-track {
-            display: flex;
+            margin-top: 0;
+			display: flex;
             animation: scroll 22s linear infinite; 
         }
 
