--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -21,15 +21,19 @@
         main {
             margin-top: 0;
 			margin: 0;
+			margin-bottom: -10;
 			padding: 0;
         }
         .main-container {
             padding-top: 0;
 			margin: 0;
+			margin-bottom: 0;
 			padding: 0;
-            display: flex;
-            justify-content: space-between;
-            flex: 1;
+			padding-bottom: 0;
+			
+            /* display: flex;
+            justify-content: space-between; 
+            flex: 1; */
         }
         .stream-container {
             flex: 3.15; /* sets horizontal length dont change */
