--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -30,10 +30,9 @@
 			margin-bottom: 0;
 			padding: 0;
 			padding-bottom: 0;
-			
-            /* display: flex;
+            display: flex;
             justify-content: space-between; 
-            flex: 1; */
+            flex: 1;
         }
         .stream-container {
             flex: 3.15; /* sets horizontal length dont change */
