--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -175,6 +175,7 @@
         .carousel-track {
             margin-top: 0;
 			display: flex;
+			align-items: flex-start;
 			justify-content: space-between; /* Ensures items are evenly spaced */
             animation: scroll 22s linear infinite; 
         }
@@ -186,7 +187,7 @@
         }
 
         .carousel-item img {
-            max-width: 100px;
+            max-width: 150px;
             height: auto;
             display: block;
             margin: 0 auto;
