--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -166,7 +166,7 @@
         .carousel-container {
             width: 100%;
             overflow: hidden;
-			align: flex-start;
+			align: top;
             /* background-color: #f8f9fa; */
 			margin: 0;
             padding: 0 rem 0; /* Decrease padding to reduce gap */
