--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -36,10 +36,8 @@
         }
         .stream-container {
             flex: 3.15; /* sets horizontal length dont change */
-            display: flex;
-			height: calc(100vh - 20rem); /* Adjust height based on your carousel */
+            display: flex-start;
             flex-direction: column;
-			justify-content: flex-start;
             margin-top: 0;
             padding-top: 0;
         }
