--- a/Pippa/index.html
+++ b/Pippa/index.html
@@ -9,7 +9,7 @@
         html, body {
             margin: 0;
             padding: 0;
-            height: 100%;
+            height: 120%;
         }
         body {
             display: flex;
@@ -20,22 +20,29 @@
         }
         main {
             margin-top: 0;
+			margin: 0;
+			margin-bottom: -10;
+			padding: 0;
         }
         .main-container {
             padding-top: 0;
+			margin: 0;
+			margin-bottom: 0;
+			padding: 0;
+			padding-bottom: 0;
             display: flex;
-            justify-content: space-between;
-            flex: 1;
+            justify-content: space-between; 
+            height: 100vh; /* Ensures it uses full viewport height */
         }
         .stream-container {
-            flex: 3.15;
+            flex: 3.15; /* sets horizontal length dont change */
             display: flex-start;
             flex-direction: column;
             margin-top: 0;
             padding-top: 0;
         }
         .chat-container {
-            flex: 0.85;
+            flex: 0.85; /* sets horizontal length dont change */
             display: flex;
             flex-direction: column;
             height: 100%;
@@ -115,11 +122,13 @@
             width: 100%;
             height: calc(100vh - 4rem);
             border: none;
+			margin-bottom: 0;
         }
         .chat-iframe {
             width: 100%;
             height: calc(100vh - 4rem);
             border: none;
+			margin-bottom: 0;
         }
         .sidebar {
             position: fixed;
@@ -152,18 +161,60 @@
             top: 10px;
             left: 10px;
         }
+
+        /* Carousel styles */
+        .carousel-container {
+            width: 100%;
+            overflow: hidden;
+			align: top;
+            /* background-color: #f8f9fa; */
+			margin: 0;
+            padding: 0 rem 0; /* Decrease padding to reduce gap */
+            flex-shrink: 0; /* Prevents shrinking of the carousel when zooming */
+			margin-top: 0.5rem; /* Controls the consistent gap */
+
+        }
+
+        .carousel-track {
+            margin-top: 0;
+			display: flex;
+			align-items: flex-start;
+			justify-content: space-between; /* Ensures items are evenly spaced */
+            animation: scroll 22s linear infinite; 
+        }
+
+        .carousel-item {
+            flex: 0 0 calc(100%/ 8); /* Adjust width to fit 8 items */
+            margin: 0 1rem;
+            text-align: center;
+        }
+
+        .carousel-item img {
+            max-width: 150px;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
+
+        @keyframes scroll {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
+        }
     </style>
     <script>
-        let configData = null;  // To store config.json data
-        let menuData = null;    // To store menu.json data
+        let configData = null;
+        let menuData = null;
 
-        // Load config.json only once
+        // Load config.json
         async function loadConfig() {
-            if (!configData) {  // Only fetch if configData hasn't been loaded
+            if (!configData) {
                 const response = await fetch('config.json');
                 configData = await response.json();
 
-                // Load YouTube live video ID
                 const apiKey = configData.youtube_api_key;
                 const channelId = configData.youtube_channel_id;
 
@@ -177,23 +228,22 @@
                     }
                 }
 
-                // Conditionally display buttons
-                if (configData.twitch_channel && configData.twitch_channel.trim() !== "") {
+                if (configData.twitch_channel) {
                     document.querySelector('.twitch-btn').style.display = 'block';
                 }
-                if (configData.kick_live_id && configData.kick_live_id.trim() !== "") {
+                if (configData.kick_live_id) {
                     document.querySelector('.kick-btn').style.display = 'block';
                 }
-                if (configData.youtube_channel_id && configData.youtube_channel_id.trim() !== "") {
+                if (configData.youtube_channel_id) {
                     document.querySelector('.youtube-btn').style.display = 'block';
                 }
             }
             return configData;
         }
 
-        // Load menu.json only once
+        // Load menu.json
         async function loadMenu() {
-            if (!menuData) {  // Only fetch if menuData hasn't been loaded
+            if (!menuData) {
                 const response = await fetch('menu.json');
                 menuData = await response.json();
             }
@@ -210,31 +260,66 @@
             });
         }
 
-        // Stream loader using configData
+        // Load merchandise JSON and populate the carousel
+        async function loadMerch() {
+			const config = await loadConfig();
+            const response = await fetch('merch.json');
+            const merchData = await response.json();
+
+            const carouselTrack = document.querySelector('.carousel-track');
+			for (let i = 0; i < 2; i++) {
+				// Prepend a "Tip Jar" item if streamelements_id is available
+				if (config.streamelements_id) {
+					const tipJar = document.createElement('div');
+					tipJar.classList.add('carousel-item');
+					tipJar.innerHTML = `
+						<a href="https://streamelements.com/${config.streamelements_id}/tip" target="_blank">
+							<img src="https://media.influencerupdate.biz/2018/4/88369/streamelements-r225x.png" alt="Tip Jar">
+							<p>Tip Jar</p>
+							<p></p>
+						</a>
+					`;
+					carouselTrack.appendChild(tipJar);
+				}
+
+				merchData.forEach(item => {
+					const merchItem = document.createElement('div');
+					merchItem.classList.add('carousel-item');
+
+					merchItem.innerHTML = `
+						<a href="${item.link}" target="_blank">
+							<img src="${item.image}" alt="${item.product_name}">
+							<p>${item.product_name}</p>
+							<p>${item.price}</p>
+						</a>
+					`;
+					carouselTrack.appendChild(merchItem);
+				});
+			}
+        }
+
         async function loadStream(service) {
-            const config = await loadConfig();  // Use the globally stored configData
+            const config = await loadConfig();
 
             const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
 
             const iframe = document.getElementById('live-stream');
-            
+
             if (service === 'youtube') {
                 iframe.src = youtubeEmbed;
             } else if (service === 'twitch') {
                 iframe.src = twitchEmbed;
             }
 
-            // Enable fullscreen
             iframe.setAttribute('allowfullscreen', 'true');
             iframe.setAttribute('allow', 'fullscreen');
         }
 
-        // Chat loader using configData
         async function loadChat() {
-            const config = await loadConfig();  // Use the globally stored configData
+            const config = await loadConfig();
 
-            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
+            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}&darkpopout`;
             document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
         }
 
@@ -250,11 +335,26 @@
         }
 
         window.onload = async function() {
-            await loadStream('youtube');  // Autoload YouTube stream
-            await loadChat();  // Load chat only once
-            switchTab('youtube-chat');  // Default to YouTube chat
-            await loadMenu();  // Load menu only once
+            await loadStream('youtube');
+            await loadChat();
+            switchTab('youtube-chat');
+            await loadMenu();
+            await loadMerch();  // Load merchandise carousel
         }
+
+        // Pause scrolling on mouseover, resume on mouseout
+        document.addEventListener('DOMContentLoaded', () => {
+            const carouselTrack = document.querySelector('.carousel-track');
+
+            carouselTrack.addEventListener('mouseover', () => {
+                carouselTrack.style.animationPlayState = 'paused';
+            });
+
+            carouselTrack.addEventListener('mouseout', () => {
+                carouselTrack.style.animationPlayState = 'running';
+            });
+        });
+
     </script>
 </head>
 <body>
@@ -262,7 +362,7 @@
         <div class="stream-container">
             <div class="stream-buttons">
                 <button class="menu-button" onclick="toggleSidebar()">
-                    <img src="menu.png" alt="Menu">
+                    <img src="../menu.png" alt="Menu">
                 </button>
                 <button class="youtube-btn" style="display:none" onclick="loadStream('youtube')">YouTube</button>
                 <button class="twitch-btn" style="display:none" onclick="loadStream('twitch')">Twitch</button>
@@ -283,6 +383,12 @@
             </div>
         </div>
     </main>
+
+    <!-- Merchandise Carousel -->
+    <div class="carousel-container">
+        <div class="carousel-track"></div>
+    </div>
+
     <div id="sidebar" class="sidebar">
         <button class="menu-button" onclick="toggleSidebar()">
             <img src="menu.png" alt="Menu">
