--- a/Pippa/index.html
+++ b/Pippa/index.html
@@ -235,6 +235,9 @@
                 if (configData.twitch_channel) {
                     document.querySelector('.twitch-btn').style.display = 'block';
                 }
+				if (config.rumble_live_id) { 
+					document.querySelector('.rumble-btn').style.display = 'block';
+				}
                 if (configData.kick_live_id) {
                     document.querySelector('.kick-btn').style.display = 'block';
                 }
