--- a/Pippa/index.html
+++ b/Pippa/index.html
@@ -110,6 +110,13 @@
         .tabs .twitch-btn {
             background-color: #9146FF;
         }
+        .tabs .kick-btn {
+            background-color: #32CD32;
+        }
+        .tabs .rumble-btn {
+            background-color: lightgreen;
+		}
+
         .tabs img {
             height: 20px;
             width: 20px;
