--- a/Pippa/index.html
+++ b/Pippa/index.html
@@ -89,10 +89,10 @@
             background-color: #9146FF;
         }
         .stream-buttons .kick-btn {
-            background-color: #32CD32;
+            background-color: black;
         }
         .stream-buttons .rumble-btn {
-            background-color: lightgreen;
+            background-color: #32CD32;
 		}
         .tabs {
             display: flex;
@@ -111,10 +111,10 @@
             background-color: #9146FF;
         }
         .tabs .kick-btn {
-            background-color: #32CD32;
+            background-color: black;
         }
         .tabs .rumble-btn {
-            background-color: lightgreen;
+            background-color: #32CD32;
 		}
 
         .tabs img {
@@ -400,7 +400,7 @@
                 <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="../YouTube.png" alt="YouTube Chat"></button>
                 <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="../Twitch.png" alt="Twitch Chat"></button>
                 <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="../Rumble.png" alt="Rumble Chat"></button>
-				<button class="kick-btn" onclick="switchTab('kick-chat')"><img src="../Kick.png" alt="Kick Chat"></button>
+				<button class="kick-btn" onclick="switchTab('kick-chat')"><img src="../kick.png" alt="Kick Chat"></button>
             </div>
             <div id="youtube-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="youtube-chat-iframe"></iframe>
