--- a/Pippa/index.html
+++ b/Pippa/index.html
@@ -326,11 +326,11 @@
                 iframe.src = youtubeEmbed;
             } else if (service === 'twitch') {
                 iframe.src = twitchEmbed;
-            } else if (service === 'rumble') {
+            } /* else if (service === 'rumble') {
                 iframe.src = rumbleEmbed;
             } else if (service === 'kick') {
                 iframe.src = kickEmbed;
-            }
+            } */
 
             iframe.setAttribute('allowfullscreen', 'true');
             iframe.setAttribute('allow', 'fullscreen');
