--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -88,7 +88,7 @@
             background-color: #9146FF;
         }
         .stream-buttons .kick-btn {
-            background-color: #32CD32;
+            background-color: black;
         }
         .tabs {
             display: flex;
@@ -106,6 +106,9 @@
         .tabs .twitch-btn {
             background-color: #9146FF;
         }
+        .tabs .kick-btn {
+            background-color: black;
+        }		
         .tabs img {
             height: 20px;
             width: 20px;
@@ -303,6 +306,8 @@
 
             const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
+            const kickEmbed = `https://player.kick.com/${config.kick_live_id};
+
 
             const iframe = document.getElementById('live-stream');
 
@@ -321,6 +326,7 @@
 
             document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}&darkpopout`;
             document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
+			document.getElementById('kick-chat-iframe').src = `https://kick.com/${config.kick_live_id}/embed/chat`;
         }
 
         function switchTab(tabId) {
@@ -337,7 +343,7 @@
         window.onload = async function() {
             await loadStream('youtube');
             await loadChat();
-            switchTab('youtube-chat');
+            switchTab('twitch-chat');
             await loadMenu();
             await loadMerch();  // Load merchandise carousel
         }
@@ -374,6 +380,7 @@
             <div class="tabs">
                 <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="../YouTube.png" alt="YouTube Chat"></button>
                 <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="../Twitch.png" alt="Twitch Chat"></button>
+				<button class="kick-btn" onclick="switchTab('kick-chat')"><img src="../kick.png" alt="Kick Chat"></button>
             </div>
             <div id="youtube-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="youtube-chat-iframe"></iframe>
@@ -381,6 +388,9 @@
             <div id="twitch-chat" class="tab-content">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
             </div>
+			<div id="kick-chat" class="tab-content">
+				<iframe class="chat-iframe" src="" id="kick-chat-iframe"></iframe>
+			</div>
         </div>
     </main>
 
