--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -326,7 +326,7 @@
 
             document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}&darkpopout`;
             document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
-			document.getElementById('kick-chat-iframe').src = `https://kick.com/${config.kick_live_id}/embed/chat`;
+			document.getElementById('kick-chat-iframe').src = `https://kick.com/${config.kick_live_id}/chatroom`;
         }
 
         function switchTab(tabId) {
