--- a/Pippa/index.html
+++ b/Pippa/index.html
@@ -238,7 +238,9 @@
                         configData.youtube_live_video_id = videoData.items[0].id.videoId;
                     }
                 }
-
+                if (configData.youtube_channel_id) {
+                    document.querySelector('.youtube-btn').style.display = 'block';
+                }
                 if (configData.twitch_channel) {
                     document.querySelector('.twitch-btn').style.display = 'block';
                 }
@@ -247,9 +249,6 @@
 				}
                 if (configData.kick_live_id) {
                     document.querySelector('.kick-btn').style.display = 'block';
-                }
-                if (configData.youtube_channel_id) {
-                    document.querySelector('.youtube-btn').style.display = 'block';
                 }
             }
             return configData;
@@ -318,7 +317,7 @@
             const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
             const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
-            const kickEmbed = `https://player.kick.com/${config.kick_live_id};
+            const kickEmbed = `https://player.kick.com/${config.kick_live_id}`;
 
             const iframe = document.getElementById('live-stream');
 
@@ -326,11 +325,11 @@
                 iframe.src = youtubeEmbed;
             } else if (service === 'twitch') {
                 iframe.src = twitchEmbed;
-            } /* else if (service === 'rumble') {
+            } else if (service === 'rumble') {
                 iframe.src = rumbleEmbed;
             } else if (service === 'kick') {
                 iframe.src = kickEmbed;
-            } */
+            } 
 
             iframe.setAttribute('allowfullscreen', 'true');
             iframe.setAttribute('allow', 'fullscreen');
@@ -342,9 +341,7 @@
             document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}&darkpopout`;
             document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
             document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
-			document.getElementById('kick-chat-iframe').src = `https://kick.com/${config.kick_live_id}/embed/chat`;
-
-
+			document.getElementById('kick-chat-iframe').src = `https://kick.com/${config.kick_live_id}/chatroom`;
         }
 
         function switchTab(tabId) {
@@ -361,7 +358,7 @@
         window.onload = async function() {
             await loadStream('youtube');
             await loadChat();
-            switchTab('youtube-chat');
+            switchTab('twitch-chat');
             await loadMenu();
             await loadMerch();  // Load merchandise carousel
         }
