--- a/Pippa/index.html
+++ b/Pippa/index.html
@@ -244,7 +244,7 @@
                 if (configData.twitch_channel) {
                     document.querySelector('.twitch-btn').style.display = 'block';
                 }
-				if (config.rumble_live_id) { 
+				if (configData.rumble_live_id) { 
 					document.querySelector('.rumble-btn').style.display = 'block';
 				}
                 if (configData.kick_live_id) {
