--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -75,7 +75,8 @@
         }
         .stream-buttons .youtube-btn,
         .stream-buttons .twitch-btn,
-        .stream-buttons .kick-btn {
+        .stream-buttons .kick-btn,
+		.stream-buttons .rumble-btn {
             flex: 1;
             padding: 0.5rem;
             margin: 0 0.25rem;
@@ -90,6 +91,9 @@
         .stream-buttons .kick-btn {
             background-color: black;
         }
+        .stream-buttons .rumble-btn {
+            background-color: #32CD32;
+		}
         .tabs {
             display: flex;
             justify-content: center;
@@ -108,7 +112,11 @@
         }
         .tabs .kick-btn {
             background-color: black;
-        }		
+        }
+        .tabs .rumble-btn {
+            background-color: #32CD32;
+		}
+
         .tabs img {
             height: 20px;
             width: 20px;
@@ -230,15 +238,17 @@
                         configData.youtube_live_video_id = videoData.items[0].id.videoId;
                     }
                 }
-
+                if (configData.youtube_channel_id) {
+                    document.querySelector('.youtube-btn').style.display = 'block';
+                }
                 if (configData.twitch_channel) {
                     document.querySelector('.twitch-btn').style.display = 'block';
                 }
+				if (configData.rumble_live_id) { 
+					document.querySelector('.rumble-btn').style.display = 'block';
+				}
                 if (configData.kick_live_id) {
                     document.querySelector('.kick-btn').style.display = 'block';
-                }
-                if (configData.youtube_channel_id) {
-                    document.querySelector('.youtube-btn').style.display = 'block';
                 }
             }
             return configData;
@@ -306,8 +316,8 @@
 
             const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
+            const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
             const kickEmbed = `https://player.kick.com/${config.kick_live_id}`;
-
 
             const iframe = document.getElementById('live-stream');
 
@@ -315,7 +325,11 @@
                 iframe.src = youtubeEmbed;
             } else if (service === 'twitch') {
                 iframe.src = twitchEmbed;
-            }
+            } else if (service === 'rumble') {
+                iframe.src = rumbleEmbed;
+            } else if (service === 'kick') {
+                iframe.src = kickEmbed;
+            } 
 
             iframe.setAttribute('allowfullscreen', 'true');
             iframe.setAttribute('allow', 'fullscreen');
@@ -326,6 +340,7 @@
 
             document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}&darkpopout`;
             document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
+            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
 			document.getElementById('kick-chat-iframe').src = `https://kick.com/${config.kick_live_id}/chatroom`;
         }
 
@@ -372,6 +387,7 @@
                 </button>
                 <button class="youtube-btn" style="display:none" onclick="loadStream('youtube')">YouTube</button>
                 <button class="twitch-btn" style="display:none" onclick="loadStream('twitch')">Twitch</button>
+                <button class="rumble-btn" style="display:none" onclick="loadStream('rumble')">Rumble</button>
                 <button class="kick-btn" style="display:none" onclick="loadStream('kick')">Kick</button>
             </div>
             <iframe id="live-stream" src="" allowfullscreen allow="fullscreen"></iframe>
@@ -380,13 +396,17 @@
             <div class="tabs">
                 <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="../YouTube.png" alt="YouTube Chat"></button>
                 <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="../Twitch.png" alt="Twitch Chat"></button>
+                <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="../Rumble.png" alt="Rumble Chat"></button>
 				<button class="kick-btn" onclick="switchTab('kick-chat')"><img src="../kick.png" alt="Kick Chat"></button>
-           </div>
+            </div>
             <div id="youtube-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="youtube-chat-iframe"></iframe>
             </div>
             <div id="twitch-chat" class="tab-content">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
+            </div>
+            <div id="rumble-chat" class="tab-content">
+                <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
             </div>
 			<div id="kick-chat" class="tab-content">
 				<iframe class="chat-iframe" src="" id="kick-chat-iframe"></iframe>
