--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -406,10 +406,10 @@
         </div>
         <div class="chat-container">
             <div class="tabs">
-                <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="../YouTube.png" alt="YouTube Chat"></button>
-                <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="../Twitch.png" alt="Twitch Chat"></button>
-                <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="../Rumble.png" alt="Rumble Chat"></button>
-				<button class="kick-btn" onclick="switchTab('kick-chat')"><img src="../kick.png" alt="Kick Chat"></button>
+                <button class="youtube-chat-btn" onclick="switchTab('youtube-chat')"><img src="../YouTube.png" alt="YouTube Chat"></button>
+                <button class="twitch-chat-btn" onclick="switchTab('twitch-chat')"><img src="../Twitch.png" alt="Twitch Chat"></button>
+                <button class="rumble-chat-btn" onclick="switchTab('rumble-chat')"><img src="../Rumble.png" alt="Rumble Chat"></button>
+				<button class="kick-chat-btn" onclick="switchTab('kick-chat')"><img src="../kick.png" alt="Kick Chat"></button>
             </div>
             <div id="youtube-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="youtube-chat-iframe"></iframe>
