--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -104,16 +104,16 @@
             margin: 0 0.25rem;
             color: white;
         }
-        .tabs .youtube-btn {
+        .tabs .youtube-chat-btn {
             background-color: red;
         }
-        .tabs .twitch-btn {
+        .tabs .twitch-chat-btn {
             background-color: #9146FF;
         }
-        .tabs .kick-btn {
+        .tabs .kick-chat-btn {
             background-color: black;
         }
-        .tabs .rumble-btn {
+        .tabs .rumble-chat-btn {
             background-color: #32CD32;
 		}
 
