--- a/Pippa/index.html
+++ b/Pippa/index.html
@@ -104,16 +104,16 @@
             margin: 0 0.25rem;
             color: white;
         }
-        .tabs .youtube-btn {
+        .tabs .youtube-chat-btn {
             background-color: red;
         }
-        .tabs .twitch-btn {
+        .tabs .twitch-chat-btn {
             background-color: #9146FF;
         }
-        .tabs .kick-btn {
+        .tabs .kick-chat-btn {
             background-color: black;
         }
-        .tabs .rumble-btn {
+        .tabs .rumble-chat-btn {
             background-color: #32CD32;
 		}
 
@@ -240,15 +240,19 @@
                 }
                 if (configData.youtube_channel_id) {
                     document.querySelector('.youtube-btn').style.display = 'block';
+					document.querySelector('.youtube-chat-btn').style.display = 'block';
                 }
                 if (configData.twitch_channel) {
                     document.querySelector('.twitch-btn').style.display = 'block';
+					document.querySelector('.twitch-chat-btn').style.display = 'block';
                 }
 				if (configData.rumble_live_id) { 
 					document.querySelector('.rumble-btn').style.display = 'block';
+					document.querySelector('.rumble-chat-btn').style.display = 'block';
 				}
                 if (configData.kick_live_id) {
                     document.querySelector('.kick-btn').style.display = 'block';
+					document.querySelector('.kick-chat-btn').style.display = 'block';
                 }
             }
             return configData;
@@ -402,10 +406,10 @@
         </div>
         <div class="chat-container">
             <div class="tabs">
-                <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="../YouTube.png" alt="YouTube Chat"></button>
-                <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="../Twitch.png" alt="Twitch Chat"></button>
-                <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="../Rumble.png" alt="Rumble Chat"></button>
-				<button class="kick-btn" onclick="switchTab('kick-chat')"><img src="../kick.png" alt="Kick Chat"></button>
+                <button class="youtube-chat-btn" style="display:none" onclick="switchTab('youtube-chat')"><img src="../YouTube.png" alt="YouTube Chat"></button>
+                <button class="twitch-chat-btn" style="display:none" onclick="switchTab('twitch-chat')"><img src="../Twitch.png" alt="Twitch Chat"></button>
+                <button class="rumble-chat-btn" style="display:none" onclick="switchTab('rumble-chat')"><img src="../Rumble.png" alt="Rumble Chat"></button>
+				<button class="kick-chat-btn" style="display:none" onclick="switchTab('kick-chat')"><img src="../kick.png" alt="Kick Chat"></button>
             </div>
             <div id="youtube-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="youtube-chat-iframe"></iframe>
