--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -216,12 +216,11 @@
         }
 		.recent-videos-container {
 			padding: 1rem;
-			background-color: #f8f9fa;
 		}
 
 		.recent-videos-container h2 {
 			text-align: center;
-			color: #333;
+			color: white;
 		}
 
 		#recent-videos {
@@ -232,6 +231,7 @@
 		}
 
 		.video-item {
+			flex: 0 0 calc(20% - 1rem);
 			width: 200px;
 			text-align: center;
 		}
